proyecto completo frontend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-header></app-header>
 <app-acerca-de></app-acerca-de>
+<app-datospersonales></app-datospersonales>
+<app-educacion></app-educacion>
+<app-cursos></app-cursos>
 <app-experiencia></app-experiencia>
+<app-referencia></app-referencia>
+<app-hys></app-hys>
+<app-proyecto></app-proyecto>
+<app-footer></app-footer>
