--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,1 +1,93 @@
-<p>experiencia works!</p>
+<div class="row">
+    <h1>Experiencia laboral</h1>
+
+      <!-- mision sucre!-->
+    <div class="row">
+      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 ">
+        <img src="../../../assets/img/mision sucre.png" class="altura">
+      </div>
+      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 ">
+        <p> <b>FACILITADOR  MISION SUCRE <br> (01-01-2016 - 01-12-2017) </b></p>
+
+     </div>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+          <span>
+           <p class="texto">Profesor de ingenieria en sistema: Misión Sucre tiene por finalidad facilitar el acceso y la prosecución de la educación universitaria pública, permanente, integral, gratuita y en igualdad de oportunidades de todas las y los bachilleres que así lo demanden, con el propósito de incrementar el nivel educativo de la población venezolana.</p>
+
+          </span>
+      </div>
+      <!-- mision robinson!-->
+      <div class="row">
+        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 ">
+          <img src="../../../assets/img/mision robison.jpg" class="altura">
+        </div>
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3  ">
+          <p><b> FACILITADOR  MISION ROBINSON<br> (01-01-2007 - 01-12-2008)</b></p>
+
+       </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+            <span>
+              <p class="texto">Profesor de: Misión Robinson es una operación cívico militar histórica en nuestro país. Tiene como finalidad formar corazones para la libertad, enseñando a leer y a escribir a más de un millón de venezolanos distribuidos por todo el territorio nacional.
+              </p>
+            </span>
+        </div>
+        <!-- mision ribas!-->
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 ">
+            <img src="../../../assets/img/mision ribas.jpg" class="altura">
+          </div>
+          <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3  ">
+            <p> <b>FACILITADOR  MISION ROBINSON<br> (01-01-2007 - 01-12-2008) </b></p>
+
+         </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+              <span>
+                <p class="texto">Profesor de: Misión Ribas que es un programa social implementado por el Gobierno Nacional cuyo objetivo es reinsertar dentro de un sistema educativo y productivo a todas aquellas personas que no culminaron sus estudios de la tercera etapa de educación media y diversificada, para que obtengan su título de bachiller integral.
+                </p>
+              </span>
+          </div>
+           <!-- simveca!-->
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 ">
+            <img src="../../../assets/img/simveca3.jpg" class="altura">
+          </div>
+          <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3  ">
+            <p class="texto"><b>ANALISTA FUNCIONAL <br><span>(SIMVECA)</span> <br>(01-01-2000 - 01-01-2002) </b></p>
+
+         </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+              <span>
+                <p class="texto">Jefe de Almacén e Informática. Automatización, planificación y organización de la Empresa, (cta. x cobrar y pagar, inventario, factura,cotización, compra) , Manejo del personal obrero , control de inventario y Vendedor de equipo de Electricidad, instrumentación y herramientas para la empresa petrolera y petroquímica.
+                </p>
+              </span>
+          </div>
+
+           <!-- suseinca !-->
+        <div class="row">
+          <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 ">
+            <img src="../../../assets/img/SUSEINCA.jpg" class="altura">
+          </div>
+          <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3  ">
+            <p> <b>ANALISTA FUNCIONAL DE SISTEMA <span> (SUSEINCA)</span><br> (01-01-1990 - 01-01-1995) </b></p>
+
+         </div>
+          <div class="col-xs-12 col-sm-6  col-md-6 col-lg-6 ">
+              <span>
+                <p class="texto">Jefe de Almacén e Informática. Automatización , Planificación y organización de la Empresa, ( Cta. x cobrar y pagar, inventario, factura,cotización, compra) , Manejo del personal obrero, control de inventario y Vendedor de equipo de Eléctrico e instrumentación para la empresa petrolera.
+                </p>
+              </span>
+                </div>
+             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+
+
+
+
+
+
