--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,20 @@
-<img src="../../../assets/img/logoap.png" id="logoAP">
+<div class="row">
+  <div class="container">
+    <div class="logoAP">
+    <a href="https://argentinaprograma.inti.gob.ar/login/index.php" target="_blank"><img src="../../../assets/img/logoap.png" id="logoAP"></a>
+       </div>
+  <div class="redes">
+
+      <a href="https://www.linkedin.com/in/yusver-jose-813798198/" target="_blank"><img src="../../../assets/img/linkedin.png" id="linkedin"></a>
+      <a href="https://twitter.com/home" target="_blank"><img src="../../../assets/img/twitter.png" id="twitter"></a>
+      <a href="https://www.instagram.com" target="_blank"><img src="../../../assets/img/instagram.png" id="instagram"></a>
+      <a href="https://github.com/yusver1?tab=repositories" target="_blank"><img src="../../../assets/img/github.png" id="github"></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="../../../assets/img/facebook.png" id="facebook"></a>
+      <button type="button" class="btn btn-outline-light">Ingreso</button>
+
+
+       </div>
+    </div>
+</div>
+
+
