--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -1,7 +1,9 @@
-<div>
+<!-- se movio a logo-ap.component.html
+  <div>
   <a href=""><img src="../../../assets/img/linkedin.png" id="linkedin"></a>
   <a href=""><img src="../../../assets/img/twitter.png" id="twitter"></a>
   <a href=""><img src="../../../assets/img/instagram.png" id="instagram"></a>
   <a href=""><img src="../../../assets/img/github.png" id="github"></a>
   <a href=""><img src="../../../assets/img/facebook.png" id="facebook"></a>
 </div>
+!-->
