--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -1,22 +1,13 @@
 .row{
   padding: 20px;
-
 }
 div{
   background: #a1b5cb;
-
 }
-h1,h2,h3,h4{
+h1,h3{
   display: inline;
 }
 .altura{
-  height: 110px;
-  width: 110px;
+  height: 100px;
 
-
-
-}
-
-.texto{
-  text-align: justify;
 }
