--- a/src/app/components/logo-ap/logo-ap.component.css
+++ b/src/app/components/logo-ap/logo-ap.component.css
@@ -1,4 +1,38 @@
+.container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #logoAP{
   height: 100px;
+  width: 80%;
+
+}
+
+img{
+  width: 50px;
+}
+.redes{
+  margin-right: 0.5em;
+}
+
+.btn{
+  border-width: medium;
+}
+
+/*... para la vista de celular...*/
+@media (max-width:575px){
+  .container{
+    flex-direction: column;
+  }
+  .redes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .redes img{
+    margin:0.2em;
+  }
 
 }
